[docs] Cleanup: AGENTS.md reflects Java 25 baseline; un-ignore dev-docs; ignore local probes
- AGENTS.md (CLAUDE.md symlink): Java 8 -> Java 25 source level, modern features allowed.
- .gitignore: stop ignoring dev-docs/ (design docs are tracked); ignore lo-test.py,
  version-check.py, fluss-docgen/website/ (local/generated).